--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/dm-sans": "^4.5.0",
+    "@fontsource/spectral": "^4.5.0",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.13.1",
     "gatsby-plugin-gatsby-cloud": "^3.2.0",
